new-contact sub-page, changing fonts and colors, hover colors

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
     </header>
     <body>
     <center>
-    <div class="aboutbox" style="background-color:black; color:white; padding:10px; width: 80% ">
+    <div class="aboutbox1" style="background-color:black; padding:10px; width: 80% ">
     	
     	<p id="sizes"> Height </p>
     	<p id="sizes"> Bust </p>
@@ -110,7 +110,7 @@
     </div>
     <br>
 
-    <div class="aboutbox" style="background-color:black; color:white; padding:10px; width: 80%; ">
+    <div class="aboutbox2" style="background-color:black; color:white; padding:10px; width: 80%; ">
 
     	<p id="values" style="margin-left: 5em"> 179 </p>
     	<p id="values" style="margin-left: 3em"> 79 </p>
