--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>portfolio</h1>
+                        <h1 class>portfolio</h1>
                         <hr class="small">
                         <span class="subheading">darina bokhan</span> 
                                             </div>
