--- a/contact.html
+++ b/contact.html
@@ -87,14 +87,14 @@
     		<p class="contact-info">agency: NEVA models</p>
     	</div>
     </div>
-    <style>
-      #map {
-        height: 400px;
-        width: 100%;
-        padding-top: 1.5em;
-       }
-    </style>
-    <div id="map"></div>
+    	<div class="container">
+    	<div class="col-lg-10 col-md-10 col-md-offset-1">
+    		<p class="places"> Where I have been so far</p>
+    	</div>
+    	</div>
+    <div id="map">
+    	
+    </div>
     <script>
       function initMap() {
         var uluru = {lat: -25.363, lng: 131.044};
