about.html and index.html
I was working with bootstrap grids and setting container in such way it
looks nice on every screen. Still working on it…

--- a/index.html
+++ b/index.html
@@ -84,33 +84,33 @@
 
     <!-- GALLERY -->
    <div class="gallery_all">
-    <div class="col-lg-4 gallery">
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
         <img class="bottom" src="img/IMG_7193.png" />
         <img class="top" src="img/dblogo.png" />
     </div>
 
-    <div class="col-lg-4 gallery">
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
         <img class="bottom" src="img/dblogo.png" />
         <img class="top" src="img/IMG_7193.png" />
     </div>
 
 
-    <div class="col-lg-4 gallery1">
+    <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
         <img class="bottom" src="img/photographer.png" />
         <img class="top" src="img/city.png" />
      </div>
 
-     <div class="col-lg-4 gallery">
+     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
         <img class="bottom" src="img/dblogo.png" />
         <img class="top" src="img/IMG_2288.png" />
     </div>
 
-    <div class="col-lg-4 gallery">
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
         <img class="bottom" src="img/IMG_2288.png" />
         <img class="top" src="img/dblogo.png" />
     </div>
 
-     <div class="col-lg-4 gallery1">
+     <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
         <img class="bottom" src="img/city.png" />
         <img class="top" src="img/photographer1.png" />
      </div>
