--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,6 @@
     </nav>
 
     <!-- Page Header -->
-    <!-- Set your background image for this header on the line below. -->
     <header  class="intro-header" style="background-image: url('img/contact.jpg')">
         <div class="container">
             <div class="row">
@@ -154,7 +153,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                    <p class="copyright text-muted">Copyright &copy; dblifestyle.com 2016</p>
                 </div>
             </div>
         </div>
