--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,9 @@
         <form>
   <input type="text" name="firstname" value="first name"><br><br>
   <input type="text" name="lastname" value="last name"><br><br>
-  <input type="text" name="email" value="e-mail"><br><br>
-  <input type="text" name="age" value="age"><br><br>
+  <input type="email" name="email" value="e-mail"><br><br>
+  <input type="number" name="age" value="age"><br><br>
+  <input type="tel" name="telnum" value="telephone"><br><br>
   <input type="submit" value="Submit">
 </form>
     
