--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
         <img class="top" src="img/IMG_7193.png" />
     </div>
 
-
     <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
-        <img class="bottom" src="img/photographer.png" />
+        <img class="bottom" src="img/marlenamatuszczak.png" />
         <img class="top" src="img/city.png" />
      </div>
 
@@ -112,7 +111,52 @@
 
      <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
         <img class="bottom" src="img/city.png" />
-        <img class="top" src="img/photographer1.png" />
+        <img class="top" src="img/nataliaerdman.png" />
+     </div>
+
+     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+        <img class="bottom" src="img/IMG_6320.png" />
+        <img class="top" src="img/dblogo.png" />
+    </div>
+
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+        <img class="bottom" src="img/dblogo.png" />
+        <img class="top" src="img/IMG_6320.png" />
+    </div>
+
+    <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
+        <img class="bottom" src="img/marlenamatuszczak.png" />
+        <img class="top" src="img/city.png" />
+     </div>
+
+     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+        <img class="bottom" src="img/dblogo.png" />
+        <img class="top" src="img/IMG_6319.png" />
+    </div>
+
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+        <img class="bottom" src="img/IMG_6319.png" />
+        <img class="top" src="img/dblogo.png" />
+    </div>
+
+     <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
+        <img class="bottom" src="img/city.png" />
+        <img class="top" src="img/nataliaerdman.png" />
+     </div>
+
+     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+        <img class="bottom" src="img/IMG_7189.png" />
+        <img class="top" src="img/dblogo.png" />
+    </div>
+
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+        <img class="bottom" src="img/dblogo.png" />
+        <img class="top" src="img/IMG_7189.png" />
+    </div>
+
+    <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
+        <img class="bottom" src="img/nataliaerdman.png" />
+        <img class="top" src="img/city.png" />
      </div>
 
      </div>
@@ -143,7 +187,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                    <p class="copyright text-muted">Copyright &copy; dblifestyle.com 2016</p>
                 </div>
             </div>
         </div>
