--- a/contact.html
+++ b/contact.html
@@ -79,13 +79,15 @@
             </div>
         </div>
     </header>
+    <main>
     <div class="container">
     	<div class="col-lg-10 col-md-10 col-md-offset-1">
-    		<p class="contact-info">phone : +48 800 872 456</p>
-    		<p class="contact-info">e-mail: darinabokhan@gmail.com</p>
-    		<p class="contact-info">agency: NEVA models</p>
+    		<p class="contact-info"><strong>phone</strong> : +48 800 872 456</p>
+    		<p class="contact-info"><strong>e-mail</strong> : darinabokhan@gmail.com</p>
+    		<p class="contact-info"><strong>agency</strong> : NEVA models</p>
     	</div>
     </div>
+    </main>
     <center>
     <div class="container">
      <p> Sign up to newsletter</p>
