--- a/post.html
+++ b/post.html
@@ -87,15 +87,18 @@
     <article>
     	<div class="container">
     		<div class="row">
-    			<div class="col-lg-4">
+    			<div class="col-lg-3">
 
     			</div>
-    			<div class="col-lg-4">
+    			<div class="col-lg-6">
     			<center>
-    			<p> Check out this cool video!</p>
+    			<h2> Check out this cool video!</h2>
+                <p> Check this YouTube video with Emily Ratajkowski made by Vogue. Video was shooted in her L.A loft.</p>
+                <p>"73 questions" series was made by Vogue and is a great initiative to learn more about famouse people's lifes. This fast interview scene gives us insider view of her life in less than 7 minutes!</p>
+                <p><strong>Enjoy!</strong></p>
     			</center>
     			</div>
-    			<div class="col-lg-4">
+    			<div class="col-lg-3">
 
     			</div>
     		</div>
