--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
     </div>
     </center>
 
-    	<div class="container">
+    	<div class="container contactFirst">
     	<div class="col-lg-10 col-md-10 col-md-offset-1">
     		<p class="places"> Where I have been so far</p>
     	</div>
@@ -136,6 +136,8 @@
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCybGifkDUUPUKKdV9elSZoAu9YMG1JGTc&callback=initMap">
     </script>
+
+    <script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script> 
 
     <hr>
 
@@ -180,6 +182,7 @@
 
     <!-- Theme JavaScript -->
     <script src="js/clean-blog.min.js"></script>
+    <script src="interaction.js"></script>
 
 </body>
 
