--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="css/lightbox.min.css">
+    
 
 
 </head>
@@ -84,83 +85,84 @@
 
     <!-- GALLERY -->
    <div class="gallery_all">
-    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row1">
         <img class="bottom" src="img/IMG_7193.png" />
         <img class="top" src="img/dblogo.png" />
     </div>
 
-    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row1">
         <img class="bottom" src="img/dblogo.png" />
         <img class="top" src="img/IMG_7193.png" />
     </div>
 
-    <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4 row1">
         <img class="bottom" src="img/marlenamatuszczak.png" />
         <img class="top" src="img/city.png" />
      </div>
 
-     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row2">
         <img class="bottom" src="img/dblogo.png" />
         <img class="top" src="img/IMG_2288.png" />
     </div>
 
-    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row2">
         <img class="bottom" src="img/IMG_2288.png" />
         <img class="top" src="img/dblogo.png" />
     </div>
 
-     <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
+     <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4 row2">
         <img class="bottom" src="img/city.png" />
         <img class="top" src="img/nataliaerdman.png" />
      </div>
 
-     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row3">
         <img class="bottom" src="img/IMG_6320.png" />
         <img class="top" src="img/dblogo.png" />
     </div>
 
-    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row3">
         <img class="bottom" src="img/dblogo.png" />
         <img class="top" src="img/IMG_6320.png" />
     </div>
 
-    <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4 row3">
         <img class="bottom" src="img/marlenamatuszczak.png" />
         <img class="top" src="img/city.png" />
      </div>
 
-     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row4">
         <img class="bottom" src="img/dblogo.png" />
         <img class="top" src="img/IMG_6319.png" />
     </div>
 
-    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row4">
         <img class="bottom" src="img/IMG_6319.png" />
         <img class="top" src="img/dblogo.png" />
     </div>
 
-     <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
+     <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4 row4">
         <img class="bottom" src="img/city.png" />
         <img class="top" src="img/nataliaerdman.png" />
      </div>
 
-     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row5">
         <img class="bottom" src="img/IMG_7189.png" />
         <img class="top" src="img/dblogo.png" />
     </div>
 
-    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row5">
         <img class="bottom" src="img/dblogo.png" />
         <img class="top" src="img/IMG_7189.png" />
     </div>
 
-    <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 gallery1 col-md-4 col-sm-4 col-xs-4 row5">
         <img class="bottom" src="img/nataliaerdman.png" />
         <img class="top" src="img/city.png" />
      </div>
 
      </div>
 
+<script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>  <!-- scroll reveal -->
 
     <hr>
 
@@ -206,6 +208,7 @@
     <!-- Theme JavaScript -->
     <script src="js/clean-blog.min.js"></script>
     <script src="js/lightbox-plus-jquery.min.js"></script>
+    <script src="interaction.js"></script>
 
 </body>
 
