--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- Theme CSS -->
     <link href="css/clean-blog.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -68,8 +69,7 @@
     </nav>
 
     <!-- Page Header -->
-    <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/home.png')">
+    <header class="intro-header header_index" >
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -77,13 +77,14 @@
                         <h1 class>portfolio</h1>
                         <hr class="small">
                         <span class="subheading">darina bokhan</span> 
-                                            </div>
+                        </div>
                 </div>
             </div>
         </div>
     </header>
 
     <!-- GALLERY -->
+    <main>
    <div class="gallery_all">
     <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row1">
         <img class="bottom" src="img/IMG_7193.png" />
@@ -161,9 +162,8 @@
      </div>
 
      </div>
-
-<script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>  <!-- scroll reveal -->
-
+     </main>
+     
     <hr>
 
     <!-- Footer -->
@@ -205,10 +205,14 @@
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
 
+    <!-- scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>  
+
     <!-- Theme JavaScript -->
     <script src="js/clean-blog.min.js"></script>
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <script src="interaction.js"></script>
+
 
 </body>
 
