--- a/contact.html
+++ b/contact.html
@@ -67,13 +67,15 @@
     </nav>
 
     <!-- Page Header -->
-    <header  class="intro-header header_contact">
+    <header class="intro-header header_index" >
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div class="page-heading">
-                        <p class="abouthead"> contact me <p>
-                    </div>
+                    <div class="site-heading">
+                        <h1 class>contact</h1>
+                        <hr class="small">
+                        <span class="subheading">darina bokhan</span> 
+                        </div>
                 </div>
             </div>
         </div>
