--- a/index.html
+++ b/index.html
@@ -15,21 +15,14 @@
     <!--CSS -->
     <link href="css/style.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
+    <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    
-    
-
-
 </head>
-
-
-
+<body>
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -72,7 +65,6 @@
     </header>
 
 
-    <body>
     <!-- GALLERY -->
        <div class="gallery_all">
             <div class="col-lg-4 gallery col-md-4 col-sm-4 col-xs-4 row1">
