still doing changes

--- a/contact.html
+++ b/contact.html
@@ -69,13 +69,11 @@
             <div class="contactBlock">
                 <img class="icon" src="img/phone.png">
                 <p class="contactText">+48 800 800 800</p>
-
             </div>
 
             <div class="contactBlock">
                 <img class="icon" src="img/email.png">
-                <p class="contactText">darin.bokhan@gmail.com</p>
-                
+                <p class="contactText">darina.bokhan@gmail.com</p>
             </div>
         </center>
     </div>
