--- a/post.html
+++ b/post.html
@@ -79,8 +79,13 @@
         <article class="postWraper">
         	<h1 class="postH1">Check out this cool video!</h1>
             <p class="postText">
-                I was surfing in internet and found this amazing video by <b>Vogue</b> with <span class="model">Emily Ratajkowski</span>. I really love the style of this video. You can see how famous models live and just dive deeper into their lifestyle. The series 73 Questions With... also features other famous people like <span class="model">Taylor Swift</span>,  <span class="model">Kendall Jenner</span>, <span class="model">Emma Stone</span> and even male actors like <span class="model">Neil Patrick Harris</span>. <br><br> Nevertheless this Vogue series is special in terms of style it is made. Do not forget to check other Vogue movies and tell me what You think.
+                I was surfing in internet and found this amazing video by <b>Vogue</b> with <span class="model">Emily Ratajkowski</span>. I really love the style of this video. You can see how famous models live and just dive deeper into their lifestyle. The series 73 Questions With... also features other famous people like <span class="model">Taylor Swift</span>,  <span class="model">Kendall Jenner</span>, <span class="model">Emma Stone</span> and even male actors like <span class="model">Neil Patrick Harris</span>. <br>
             </p>
+            <aside>
+                <p class="postText">
+                    <br> Nevertheless this Vogue series is special in terms of style it is made. Do not forget to check other Vogue movies and tell me what You think.
+                </p>
+            </aside>
             <hr>
             <section id="video">
                 <center>
