I think it's the final version
I cleaned code, changed some design

--- a/index.html
+++ b/index.html
@@ -172,9 +172,7 @@
     <script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>  
 
     <!-- Theme JavaScript -->
-    <script src="js/clean-blog.min.js"></script>
-    <script src="js/lightbox-plus-jquery.min.js"></script>
-    <script src="interaction.js"></script>
+    <script src="js/interaction.js"></script>
 
 
 </body>
