--- a/contact.html
+++ b/contact.html
@@ -82,14 +82,16 @@
      <p class="newsletterText"> Sign up to newsletter</p>
      <center>
         <form class="contact">
-            <input type="text" name="firstname" value="first name"><br><br>
-            <input type="text" name="lastname" value="last name"><br><br>
-            <input type="email" name="email" value="e-mail"><br><br>
-            <input type="number" name="age" value="18"><br><br>
-            <input type="tel" name="telnum" value="telephone"><br><br>
-            <input type="submit" value="Submit">
+            <input class="formField" type="text" name="firstname" value="first name"><br><br>
+            <input class="formField" type="text" name="lastname" value="last name"><br><br>
+            <input class="formField" type="email" name="email" value="e-mail"><br><br>
+            <input class="formField" type="number" name="age" value="18"><br><br>
+            <input class="formField" type="tel" name="telnum" value="telephone"><br><br>
+            <input onsubmit="crazyFunction()" class="formField" type="submit" value="Send">
         </form>
         </center>
+
+        <h2 class="formText">Thank You!</h2>
 
     <h3 class="contactH3">Where I have been so far?</h3>    
     <div id="map">
@@ -151,7 +153,7 @@
     <script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>  
 
     <!-- Theme JavaScript -->
-    <script src="interaction.js"></script>
+    <script src="js/interaction.js"></script>
 
 </body>
 
