Logo and sketch file
I added logo in navbar.

Moreover, I did one sketch project. I passed this part before and talk
with william and he told me I do not have to do it if I passed it, but
I did it anyway just in case XD

--- a/about.html
+++ b/about.html
@@ -32,6 +32,9 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">db lifestyle</a>
+                <a class="logoNav" href="index.html">
+                    <img src="img/logosmall.png">
+                </a>
 
             </div>
 
