--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+
 </head>
 <body>
     <!-- Navigation -->
@@ -29,6 +30,9 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">db lifestyle</a>
+                <a class="logoNav" href="index.html">
+                    <img src="img/logosmall.png">
+                </a>
 
             </div>
 
