--- a/post.html
+++ b/post.html
@@ -37,6 +37,9 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">db lifestyle</a>
+                <a class="logoNav" href="index.html">
+                    <img src="img/logosmall.png">
+                </a>
 
             </div>
 
