--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Theme CSS -->
+    <!-- CSS -->
     <link href="css/style.css" rel="stylesheet">
 
     <!-- Google Fonts -->
@@ -91,7 +91,7 @@
                         <input class="formField" type="email" name="email" value="e-mail"><br><br>
                         <input class="formField" type="number" name="age" value="18"><br><br>
                         <input class="formField" type="tel" name="telnum" value="telephone"><br><br>
-                        <input onsubmit="crazyFunction()" class="formField" type="submit" value="Send">
+                        <input  class="formField" type="submit" value="Send">
                     </form>
                 </center>
     </div>
